--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "motw-2015",
   "version": "0.0.2",
-  "description": "Boilerplate project for Musicking on the Web 2015 workshop.",
+  "description": "Boilerplate project and code examples for MOTW 2015 workshop.",
   "author": "Hongchan Choi <hongchan.choi@gmail.com>",
   "devDependencies": {
-    "browser-sync": "~2.7.13",
-    "del": "~1.2.0",
-    "gulp": "~3.9.0",
-    "gulp-concat": "~2.6.0",
-    "gulp-cssmin": "~0.1.7",
-    "gulp-gh-pages": "~0.5.2",
-    "gulp-load-plugins": "~0.10.0",
-    "gulp-size": "~1.2.3",
-    "gulp-uglify": "~1.2.0",
-    "run-sequence": "~1.1.1"
+    "browser-sync": "^2.8.2",
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-gh-pages": "^0.5.2",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-uglify": "^1.2.0",
+    "run-sequence": "^1.1.2"
   },
   "repository": {
     "type": "git",
