--- a/src/bower.json
+++ b/src/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "motw-2015",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "homepage": "https://github.com/hoch/motw-2015",
   "authors": [
     "Hongchan Choi"
@@ -11,6 +11,7 @@
     "bower_components"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0"
+    "polymer": "Polymer/polymer#^1.0.0",
+    "paper-styles": "PolymerElements/paper-styles#~1.0.11"
   }
 }
